RESOLVED FIXED312401
[Site Isolation] De-duplicate logic to generate MixedContent error message
https://bugs.webkit.org/show_bug.cgi?id=312401
Summary [Site Isolation] De-duplicate logic to generate MixedContent error message
rupin
Reported 2026-04-15 12:07:20 PDT
[Mixed Content] De-duplicate logic to generate error string
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-15 12:07:26 PDT
rupin
Comment 2 2026-04-15 12:17:07 PDT
EWS
Comment 3 2026-04-16 13:18:05 PDT
Committed 311399@main (cb376ae47030): <https://commits.webkit.org/311399@main> Reviewed commits have been landed. Closing PR #62841 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.