[Site Isolation] De-duplicate logic to generate MixedContent error message https://bugs.webkit.org/show_bug.cgi?id=312401 rdar://174856163

Reviewed by Charlie Wolfe.

To make MixedContent blocking work with site isolation,
https://commits.webkit.org/301022@main rightfully moved the logic to log the
error string from MixedContentChecker to LocalFrame and WebPageProxy.

It is indeed necessary to have a reportMixedContentViolation() function in both
places so the error can be logged in both LocalFrame and RemoteFrame cases. But
we can consolidate the logic to generate the error string to just one function
that both callsites can use. This way, any future changes to this error string
only need to be done in one place.

There is no behavior change. This is covered by existing layout tests.

* Source/WebCore/loader/MixedContentChecker.cpp:
(WebCore::MixedContentChecker::mixedContentViolationMessage):
* Source/WebCore/loader/MixedContentChecker.h:
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::reportMixedContentViolation const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::reportMixedContentViolation):

Canonical link: https://commits.webkit.org/311399@main